--- a/.github/workflows/deployer.yml
+++ b/.github/workflows/deployer.yml
@@ -61,4 +61,5 @@ jobs:
           --runtime=python39 --gen2 --entry-point=main \
           --trigger-bucket=gemini-demo-images \
           --min-instances=1 \
+          --memory=2Gi \
           --source=gs://gemini-cloud-function-source/src.zip"
