--- a/.github/workflows/deployer.yml
+++ b/.github/workflows/deployer.yml
@@ -57,10 +57,10 @@ jobs:
 
       - name: "deploy cloud function using gcloud"
         continue-on-error: false
-        run: gcloud  functions deploy gemini-example --region=us-central1 \
+        run: "gcloud  functions deploy gemini-example --region=us-central1 \
           --runtime=python39 --gen2 --entry-point=main \
           --trigger-bucket=gemini-demo-images \
           --min-instances=1 \
           --memory=2Gi \
           --source=gs://gemini-cloud-function-source/generate.zip \
-          --set-env-vars=[PROJECT=${{secrets.PROJECT}},LOCATION=${{secrets.LOCATION}}]
+          --set-env-vars=[PROJECT=${{secrets.PROJECT}},LOCATION=${{secrets.LOCATION}}]"
