continue on error

--- a/.github/workflows/deployer.yml
+++ b/.github/workflows/deployer.yml
@@ -21,16 +21,20 @@ jobs:
           version: ">= 363.0.0"
 
       - name: "create gcs bucket for generate function"
+        continue-on-error: true
         run: "gcloud storage buckets create gs://${{secrets.GENERATE_SOURCE_GCS}}"
 
       - name: "create gcs bucket for serve function"
+        continue-on-error: true
         run: "gcloud storage buckets create gs://${{secrets.SERVE_SOURCE_GCS}}"
 
       - name: "create public gcs bucket for uploaded images"
+        continue-on-error: true
         run: gcloud storage buckets create gs://${{secrets.IMAGES_GCS}}
           gcloud storage buckets add-iam-policy-binding gs://${{secrets.IMAGES_GCS}} --member=allUsers --role=roles/storage.objectViewer
 
       - name: "create public gcs bucket for html"
+        continue-on-error: true
         run: gcloud storage buckets create gs://${{secrets.HOST}}
           gcloud storage buckets add-iam-policy-binding gs://${{secrets.HOST}} --member=allUsers --role=roles/storage.objectViewer
 
