--- a/.github/workflows/deployer.yml
+++ b/.github/workflows/deployer.yml
@@ -113,13 +113,13 @@ jobs:
       - name: "deploy cloud function using gcloud"
         continue-on-error: false
         run: "gcloud  functions deploy gemini-example --region=us-central1 \
-          --runtime=python39 --gen2 \
+          --runtime=python39 --gen2 --entry-point=main \
           --trigger-bucket=${{secrets.IMAGES_GCS}} \
           --min-instances=1 \
           --memory=2Gi \
-          --source=gs://${{secrets.GENERATE_SOURCE_GCS}}/generate.zip \
           --region=${{secrets.LOCATION}} \
-          --set-env-vars=[PROJECT=${{secrets.PROJECT}},LOCATION=${{secrets.LOCATION}}]"
+          --set-env-vars=[PROJECT=${{secrets.PROJECT}},LOCATION=${{secrets.LOCATION}}]
+          --source=gs://${{secrets.GENERATE_SOURCE_GCS}}/generate.zip"
 
   deploy-serve:
     runs-on: ubuntu-latest
