--- a/.github/workflows/deployer.yml
+++ b/.github/workflows/deployer.yml
@@ -117,7 +117,7 @@ jobs:
           --trigger-bucket=${{secrets.IMAGES_GCS}} \
           --min-instances=1 \
           --memory=2Gi \
-          --region=${{secrets.LOCATION}} \S
+          --region=${{secrets.LOCATION}} \
           --set-env-vars=[PROJECT=${{secrets.PROJECT}},LOCATION=${{secrets.LOCATION}}]
           --source=gs://${{secrets.GENERATE_SOURCE_GCS}}/generate.zip"
 
