variable for trigger-bucket

--- a/.github/workflows/deployer.yml
+++ b/.github/workflows/deployer.yml
@@ -116,7 +116,7 @@ jobs:
         run:
           "gcloud  functions deploy gemini-example --region=${{secrets.LOCATION}} \
           --runtime=python39 --gen2 --entry-point=main \
-          --trigger-bucket=cf-gemini-demo-images \
+          --trigger-bucket=${{secrets.IMAGES_GCS}} \
           --min-instances=1 \
           --memory=2Gi \
           --set-env-vars=[PROJECT=${{secrets.PROJECT}},LOCATION=${{secrets.LOCATION}}] \
