--- a/.github/workflows/deployer.yml
+++ b/.github/workflows/deployer.yml
@@ -31,7 +31,7 @@ jobs:
       - name: "create public gcs bucket for uploaded images"
         continue-on-error: true
         run:
-          gcloud storage buckets create gs://${{secrets.IMAGES_GCS}} --location=${{secrets.LOCATION}};
+          gcloud storage buckets create gs://${{vars.IMAGES_GCS}} --location=${{secrets.LOCATION}};
           gcloud storage buckets add-iam-policy-binding gs://${{secrets.IMAGES_GCS}} --member=allUsers --role=roles/storage.objectViewer
 
       - name: "create public gcs bucket for html front end"
