gemini-demo-text firestore index

--- a/.github/workflows/deployer.yml
+++ b/.github/workflows/deployer.yml
@@ -57,6 +57,10 @@ jobs:
         continue-on-error: true
         run: gcloud firestore indexes composite create --collection-group=gemini-demo-images --field-config=field-path=timeStamp,order=descending --field-config=field-path=imageDescription,order=ascending
 
+      - name: "create firestore index for pictionary gemini-demo-text collection"
+        continue-on-error: true
+        run: gcloud firestore indexes composite create --collection-group=gemini-demo-text --field-config=field-path=user,order=ascending --field-config=field-path=timeStamp,order=descending
+
   build:
     runs-on: ubuntu-latest
     needs: infra
