--- a/.github/workflows/deployer.yml
+++ b/.github/workflows/deployer.yml
@@ -49,6 +49,12 @@ jobs:
         run: gcloud storage buckets create gs://${{vars.HOST}};
           gcloud storage buckets add-iam-policy-binding gs://${{vars.HOST}} --member=allUsers --role=roles/storage.objectViewer
 
+      - name: "create public gcs bucket for uploaded audio files for speech2text"
+          continue-on-error: true
+          run:
+            gcloud storage buckets create gs://${{vars.SPEECH2TEXT_GCS}} --location=${{vars.LOCATION}};
+            gcloud storage buckets add-iam-policy-binding gs://${{vars.SPEECH2TEXT_GCS}} --member=allUsers --role=roles/storage.objectViewer
+      
       - name: "add iam publisher role to gcs"
         continue-on-error: true
         run:
@@ -70,6 +76,10 @@ jobs:
       - name: "create firestore index for pictionary gemini-demo-text-result collection"
         continue-on-error: true
         run: gcloud firestore indexes composite create --collection-group=gemini-demo-text-result --field-config=field-path=timeStamp,order=descending --field-config=field-path=fileName,order=descending
+
+      - name: "create firestore index for speech2text gemini-demo-speech2text-summary collection"
+        continue-on-error: true
+        run: gcloud firestore indexes composite create --collection-group=gemini-demo-speech2text-summary --field-config=field-path=timeStamp,order=descending --field-config=field-path=fileName,order=descending
 
   build:
     runs-on: ubuntu-latest
@@ -100,6 +110,12 @@ jobs:
           name: code-directory-twilio
           path: twilio
 
+      - name: "upload speech2text directory as artifact"
+        uses: actions/upload-artifact@v3
+        with:
+            name: code-directory-speech2text
+            path: speech2text
+
       - name: "upload html artifact to google cloud storage"
         uses: "google-github-actions/upload-cloud-storage@v1"
         with:
@@ -126,6 +142,12 @@ jobs:
         with:
           path: "twilio"
           destination: ${{vars.TWILIO_SOURCE_GCS}}
+          gzip: true
+      - name: "upload speech2text artifact to google cloud storage"
+        uses: "google-github-actions/upload-cloud-storage@v1"
+        with:
+          path: "speech2text"
+          destination: ${{vars.SPEECH2TEXT_SOURCE_GCS}}
           gzip: true
 
   deploy-generate:
@@ -246,3 +268,42 @@ jobs:
           --set-env-vars PROJECT=${{secrets.PROJECT}} \
           --set-env-vars GCS_BUCKET=${{vars.TWILIO_IMAGES}} \
           --set-env-vars LOCATIONS=${{vars.LOCATIONS}}"
+
+  deploy-speech2text:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - uses: actions/checkout@v3
+      - id: "auth"
+        uses: google-github-actions/auth@v0
+        with:
+          credentials_json: ${{secrets.GCP_SA_KEY}}
+
+      - name: "set up google cloud sdk"
+        uses: "google-github-actions/setup-gcloud@v1"
+        with:
+          version: ">= 363.0.0"
+
+      - name: "copy source code directory"
+        run: "gsutil cp -r gs://${{vars.SPEECH2TEXT_SOURCE_GCS}}/speech2text ."
+
+      - name: "list files"
+        run: "cd speech2text; ls"
+
+      - name: "zip source code files"
+        run: "cd speech2text; ls; zip speech2text.zip *"
+
+      - name: "upload source code"
+        run: "gsutil cp speech2text/speech2text.zip gs://${{vars.SPEECH2TEXT_SOURCE_GCS}}"
+
+      - name: "deploy cloud function using gcloud"
+        continue-on-error: false
+        run:
+          "gcloud  functions deploy gemini-example --region=${{vars.LOCATION}} \
+          --runtime=python39 --gen2 --entry-point=main \
+          --trigger-bucket=${{vars.SPEECH2TEXT_GCS}} \
+          --min-instances=1 \
+          --memory=2Gi \
+          --set-env-vars=PROJECT=${{secrets.PROJECT}},LOCATION=${{vars.LOCATION}} \
+          --source=gs://${{vars.SPEECH2TEXT_SOURCE_GCS}}/speech2text.zip"
