--- a/.github/workflows/deployer.yml
+++ b/.github/workflows/deployer.yml
@@ -304,7 +304,7 @@ jobs:
       - name: "deploy cloud function using gcloud"
         continue-on-error: false
         run:
-          "gcloud  functions deploy gemini-example --region=${{vars.LOCATION}} \
+          "gcloud  functions deploy speech2text-summary --region=${{vars.LOCATION}} \
           --runtime=python39 --gen2 --entry-point=main \
           --trigger-bucket=${{vars.SPEECH2TEXT_GCS}} \
           --min-instances=1 \
